--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -528,11 +528,491 @@
     {
       "cell_type": "markdown",
       "source": [
+        "```python\n",
+        "for member in listEx:\n",
+        "    do_something()\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "qiGWoXEuTSph"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for member in [1,2,3,4,5,6]:\n",
+        "    print(member)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ErPNmt1wTQ3l",
+        "outputId": "9b306bb3-7b42-4aad-f52c-65497ce71bf2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_name(name):\n",
+        "    print(f'ฉันชื่อ {name}')"
+      ],
+      "metadata": {
+        "id": "OjXbkUvQU1H3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for name in ['วัชราภรณ์','จุฑากาญจน์ ','ชลธิชา','ญาดา','กิตติคุณ']:\n",
+        "    N = name\n",
+        "    print_name(N)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O_PQSREoUn-6",
+        "outputId": "d19c6848-f000-4d0d-bbe5-dc4ab95d29ce"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ฉันชื่อ วัชราภรณ์\n",
+            "ฉันชื่อ จุฑากาญจน์ \n",
+            "ฉันชื่อ ชลธิชา\n",
+            "ฉันชื่อ ญาดา\n",
+            "ฉันชื่อ กิตติคุณ\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_name_id_grade = [['นางสาวเบญญาภา ระภูเขียว','623020527-6','B'],\n",
+        "                      ['นางสาวทักษิณา ราชหุ่น','623021000-1','A'],\n",
+        "                      ['นางสาวปลายฟ้า คำเพ็ง','623021005-1','C']]"
+      ],
+      "metadata": {
+        "id": "HSqTdVfKWQhi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for each in list_name_id_grade:\n",
+        "    name = each[0]\n",
+        "    id = each[1]\n",
+        "    grade = each[2]\n",
+        "    print_grade(name,id,grade)\n",
+        "    print('----------------')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hnz7HqbRXJId",
+        "outputId": "b9310388-2fcf-4b80-fa3a-5d55e03d702e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "รหัสประจำตัว 623020527-6 ชื่อ นางสาวเบญญาภา ระภูเขียว\n",
+            "ได้เกรด B\n",
+            "----------------\n",
+            "รหัสประจำตัว 623021000-1 ชื่อ นางสาวทักษิณา ราชหุ่น\n",
+            "ได้เกรด A\n",
+            "----------------\n",
+            "รหัสประจำตัว 623021005-1 ชื่อ นางสาวปลายฟ้า คำเพ็ง\n",
+            "ได้เกรด C\n",
+            "----------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ใช้ for loop เพิ่มสมาชิกใน list"
+      ],
+      "metadata": {
+        "id": "Xm7CXqFmYSB1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_name = []\n",
+        "list_id = []\n",
+        "list_grade = []\n",
+        "for each in list_name_id_grade:\n",
+        "    list_name.append(each[0])\n",
+        "    list_id.append(each[1])\n",
+        "    list_grade.append(each[2])"
+      ],
+      "metadata": {
+        "id": "ap0A83G3YRLF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hiq0wvZgY6GM",
+        "outputId": "c801d13e-7972-488e-e910-94a62c9cbe07"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['นางสาวเบญญาภา ระภูเขียว', 'นางสาวทักษิณา ราชหุ่น', 'นางสาวปลายฟ้า คำเพ็ง']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### การวนลูปด้วย `range()`"
+      ],
+      "metadata": {
+        "id": "JbhEds7TbWPS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(100):\n",
+        "    print('งง', end = ' ')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HxXoQFZbbVpT",
+        "outputId": "ce3bdac4-e6b3-41ca-913a-29d2d7a117e6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Loop ซ้อน Loop"
+      ],
+      "metadata": {
+        "id": "OwzYAkaCcRR7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for mem1 in range(2,5): #[2,3,4]\n",
+        "    print(f'now mem1 = {mem1}')\n",
+        "    for mem2 in range(1,13): #[1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "        print(f'{mem1} x {mem2} = {mem1*mem2}')\n",
+        "    print(f'end inner for mem1 = {mem1}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JpnID7pKcOpu",
+        "outputId": "9bffcb97-a1e6-4dde-bc00-8f339bb0edae"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "now mem1 = 2\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "2 x 3 = 6\n",
+            "2 x 4 = 8\n",
+            "2 x 5 = 10\n",
+            "2 x 6 = 12\n",
+            "2 x 7 = 14\n",
+            "2 x 8 = 16\n",
+            "2 x 9 = 18\n",
+            "2 x 10 = 20\n",
+            "2 x 11 = 22\n",
+            "2 x 12 = 24\n",
+            "end inner for mem1 = 2\n",
+            "now mem1 = 3\n",
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "3 x 4 = 12\n",
+            "3 x 5 = 15\n",
+            "3 x 6 = 18\n",
+            "3 x 7 = 21\n",
+            "3 x 8 = 24\n",
+            "3 x 9 = 27\n",
+            "3 x 10 = 30\n",
+            "3 x 11 = 33\n",
+            "3 x 12 = 36\n",
+            "end inner for mem1 = 3\n",
+            "now mem1 = 4\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "4 x 5 = 20\n",
+            "4 x 6 = 24\n",
+            "4 x 7 = 28\n",
+            "4 x 8 = 32\n",
+            "4 x 9 = 36\n",
+            "4 x 10 = 40\n",
+            "4 x 11 = 44\n",
+            "4 x 12 = 48\n",
+            "end inner for mem1 = 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Loop in Function"
+      ],
+      "metadata": {
+        "id": "BHURDfVAf8Jz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_grade_loop(names,grades):\n",
+        "    for n,g in zip(names,grades):\n",
+        "        print(f'{n} ได้เกรด {g}')"
+      ],
+      "metadata": {
+        "id": "Egjjd5fecOew"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_grade_loop(list_name,list_grade)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XiZ_FbtecP5P",
+        "outputId": "049e0b8c-0e89-4490-bffe-82b3c65b6405"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "นางสาวเบญญาภา ระภูเขียว ได้เกรด B\n",
+            "นางสาวทักษิณา ราชหุ่น ได้เกรด A\n",
+            "นางสาวปลายฟ้า คำเพ็ง ได้เกรด C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Conditional Statement (if)"
       ],
       "metadata": {
         "id": "AdMUneO0Di6B"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```python\n",
+        "if condition1:\n",
+        "    do_something() ## ถ้า condition1 เป็นจริง ทำ do_something()\n",
+        "elif condition2:\n",
+        "    do_another_thing()  ## ถ้า condition1 ไม่เป็นจริงแต่ condition2 เป็นจริง ทำ do_another_thing()\n",
+        "else:\n",
+        "    do_the_last_thing() ## ถ้าไม่มี condition ไหนเป็นจริงเลย ทำ do_the_last_thing()\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "E9svJdMGh6e6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for n in list_name:\n",
+        "    if len(n)>20:\n",
+        "        print(f'{n} ได้เกรด A')\n",
+        "    else:\n",
+        "        print(f'{n} ได้เกรด F')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WBifeHsJcP1v",
+        "outputId": "853af4c8-ec4c-4eb0-a911-e6bfdf7692c8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "นางสาวเบญญาภา ระภูเขียว ได้เกรด A\n",
+            "นางสาวทักษิณา ราชหุ่น ได้เกรด A\n",
+            "นางสาวปลายฟ้า คำเพ็ง ได้เกรด F\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### operator ที่ใช้ตรวจสอบ condition\n",
+        "\n",
+        "==, !=, >=, <=, <, >, and, or"
+      ],
+      "metadata": {
+        "id": "AepkrHEKkA7v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 10 == 20\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "sw23UdfnkASr",
+        "outputId": "9a10b96d-e803-4b67-bf09-455dd964bdee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 15 <= 20\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MpOwImpecOYE",
+        "outputId": "c4b994c6-69ac-49d0-ab3a-3bdfa438e63e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a:\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "id": "88Hoo4AgcOTs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if True:\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M7ye6epncOGL",
+        "outputId": "3db3bd8e-6fd7-42e8-fe71-4bbac44e8784"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -542,8 +1022,68 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "if a and b:\n",
+        "    print('x')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a or b:\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "id": "-_K6tNsklY0O",
+        "outputId": "b1f299b1-ef9f-49f6-9c4e-69e99fb3044b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# HW\n",
+        "เขียน function ตัดเกรด โดยที่ input เป็นคะแนน(0-100) , output เป็นเกรด (F-A) หรือ 'ไม่สามารถตัดเกรดได้'\n",
+        "\n",
+        "วนลูปตัดเกรด input = [1,50,65,90,101,-5,49,'ก',80]\n",
+        "\n",
+        "กำหนด\n",
+        "\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ  0  แต่น้อยกว่า 50 จะได้เกรด F\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 50 แต่น้อยกว่า 55 จะได้เกรด D\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 55 แต่น้อยกว่า 60 จะได้เกรด D+\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 60 แต่น้อยกว่า 65 จะได้เกรด C\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 65 แต่น้อยกว่า 70 จะได้เกรด C+\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 70 แต่น้อยกว่า 75 จะได้เกรด B\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 75 แต่น้อยกว่า 80 จะได้เกรด B+\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 80  จะได้เกรด A\n",
+        "*  ถ้าคะแนนไม่อยู่ในช่วง 0-100 ให้ return 'ไม่สามารถตัดเกรดได้'"
+      ],
+      "metadata": {
+        "id": "jgF2Urtylpqu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "xUUhDR3GldrZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
