--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -72,9 +72,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FuxV7IAtD02T",
-        "outputId": "7b1c84b7-38a2-4d53-d29b-cb4544ad41da"
+        "outputId": "1a732f64-6b99-4605-d14a-a938000b2daf"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lwE0P085D0zG",
-        "outputId": "3c068ff7-5268-4349-bd1d-a0e388755833"
+        "outputId": "4e101df6-f478-41c9-a811-e039ac4e18bd"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,7 +107,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 3
         }
       ]
     },
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "T1SwjUsiDzow"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "JNws0MGlDzg7"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -182,9 +182,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mLHwTEGiDzd7",
-        "outputId": "158f6db9-c70e-4b85-c498-7527b8037f55"
+        "outputId": "8f96f4e2-63d2-4d7b-cde0-3649186c29de"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,19 +212,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 152
+          "height": 131
         },
         "id": "rm0nhmHeDzaj",
-        "outputId": "0a1b11c8-27a7-4871-bbcb-91fe08262165"
+        "outputId": "55429a05-71bd-419b-fd05-c9eb26ef9152"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-07a0750214a8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def function_a():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-07a0750214a8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def function_a():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
           ]
         }
       ]
@@ -247,7 +247,7 @@
       "metadata": {
         "id": "ik5FyttBDzXy"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -260,9 +260,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1PjEoA-uDzU_",
-        "outputId": "09346f42-7cc7-41a8-8a4c-7337f6be887d"
+        "outputId": "b277b96c-829e-44c4-aa69-b243c653af85"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,9 +283,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sLMZG-KQKcHU",
-        "outputId": "e42e0b44-5d7e-4556-d6cb-6c8987c63359"
+        "outputId": "49fa318e-e365-474e-a60b-fceaf6ce46f2"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
       "metadata": {
         "id": "3zKkSXWFKghw"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -329,9 +329,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XrZeH87fO1i_",
-        "outputId": "f58f03b2-ad10-4c69-a936-154d84dbf879"
+        "outputId": "540dde4c-7c8b-4840-c66c-0d634d653240"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,9 +354,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iLNEG71ZO1gK",
-        "outputId": "e79eea16-33a7-4448-ed54-1f47cbf7eff7"
+        "outputId": "304e74d8-ac41-4585-c43e-79d232cee7a8"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,9 +377,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P7S7sAA9PXyN",
-        "outputId": "7229f694-1891-4ec9-bbac-14fa049f2480"
+        "outputId": "241b5ac6-cf17-47bc-9e9a-5eb036deea0a"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V3n3VuB_O1da",
-        "outputId": "e202af2c-b33f-40fc-9e38-318c1bbc7fa3"
+        "outputId": "e30eb94a-11ba-4aab-ab41-dbd083414469"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +441,7 @@
       "metadata": {
         "id": "ygU4MSqbO1aU"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -454,9 +454,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JlcXZyMvRVQs",
-        "outputId": "4270d46a-ffb4-4e55-fab2-bcba3295cff3"
+        "outputId": "d52148cc-7f22-4375-9a9a-5eaa50310634"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,9 +478,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mhpcGajzRrqT",
-        "outputId": "d0b29284-5b29-42b3-c2f0-8f92c17072c5"
+        "outputId": "88ab7e37-cc22-4c22-ea93-f6e0861708c1"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,9 +502,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u3QHMqUaRw3U",
-        "outputId": "99e344e8-7342-4387-dafb-a88277fb0b52"
+        "outputId": "c9a26228-3df9-471c-8a76-132419b684b3"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,9 +548,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ErPNmt1wTQ3l",
-        "outputId": "9b306bb3-7b42-4aad-f52c-65497ce71bf2"
+        "outputId": "413c1b3f-7ca2-4f66-ee7a-aa8d114bc17c"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +575,7 @@
       "metadata": {
         "id": "OjXbkUvQU1H3"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -590,9 +590,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O_PQSREoUn-6",
-        "outputId": "d19c6848-f000-4d0d-bbe5-dc4ab95d29ce"
+        "outputId": "4b220410-6bdc-4a8a-c1f4-e86267b2d8a7"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -617,7 +617,7 @@
       "metadata": {
         "id": "HSqTdVfKWQhi"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -635,9 +635,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hnz7HqbRXJId",
-        "outputId": "b9310388-2fcf-4b80-fa3a-5d55e03d702e"
+        "outputId": "03aae24c-5dfe-4c3d-abc2-284806b7e896"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,7 +679,7 @@
       "metadata": {
         "id": "ap0A83G3YRLF"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -692,9 +692,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hiq0wvZgY6GM",
-        "outputId": "c801d13e-7972-488e-e910-94a62c9cbe07"
+        "outputId": "22294462-82b6-4610-b056-9d6b8be77bf3"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,7 +704,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 26
         }
       ]
     },
@@ -728,9 +728,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HxXoQFZbbVpT",
-        "outputId": "ce3bdac4-e6b3-41ca-913a-29d2d7a117e6"
+        "outputId": "ea12f59a-c6a1-4bdb-b087-9a626ff369b6"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,9 +764,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JpnID7pKcOpu",
-        "outputId": "9bffcb97-a1e6-4dde-bc00-8f339bb0edae"
+        "outputId": "8d0351ae-6e75-44a3-cf18-6f6cce7a2ddd"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,7 +837,7 @@
       "metadata": {
         "id": "Egjjd5fecOew"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -850,9 +850,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XiZ_FbtecP5P",
-        "outputId": "049e0b8c-0e89-4490-bffe-82b3c65b6405"
+        "outputId": "940ca33d-cf8f-4301-9e8e-880ff9b52dbd"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,9 +904,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WBifeHsJcP1v",
-        "outputId": "853af4c8-ec4c-4eb0-a911-e6bfdf7692c8"
+        "outputId": "127c7228-8217-4494-971f-46a1f0d1f227"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -938,12 +938,12 @@
       ],
       "metadata": {
         "id": "sw23UdfnkASr",
-        "outputId": "9a10b96d-e803-4b67-bf09-455dd964bdee",
+        "outputId": "ca0ca9eb-e421-40fd-d95b-2cf952e400e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -965,9 +965,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MpOwImpecOYE",
-        "outputId": "c4b994c6-69ac-49d0-ab3a-3bdfa438e63e"
+        "outputId": "a9294534-48cc-4365-8750-7bc1dda8441e"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,7 +987,7 @@
       "metadata": {
         "id": "88Hoo4AgcOTs"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1001,9 +1001,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M7ye6epncOGL",
-        "outputId": "3db3bd8e-6fd7-42e8-fe71-4bbac44e8784"
+        "outputId": "0459a55f-4d80-40d3-8d6e-d3262767de7d"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "gdx9D1eADPXK"
       },
@@ -1034,12 +1034,12 @@
       ],
       "metadata": {
         "id": "-_K6tNsklY0O",
-        "outputId": "b1f299b1-ef9f-49f6-9c4e-69e99fb3044b",
+        "outputId": "acb0de15-60d1-4e44-f32e-aea7fb69f15b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -1077,13 +1077,69 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "input = [1,50,65,90,101,-5,49,'ก',80]"
       ],
       "metadata": {
         "id": "xUUhDR3GldrZ"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(input)\n",
+        "for h in input:\n",
+        "    if type(h) == type(\"\"):\n",
+        "        print (f'คะแนน {h} ไม่สามารถตัดเกรดได้')\n",
+        "    else:\n",
+        "        if i >= 101:\n",
+        "            print (f'คะแนน {h} ไม่สามารถตัดเกรดได้')\n",
+        "        elif i >= 80:\n",
+        "            print (f'คะแนน {h} ได้เกรด  A')\n",
+        "        elif i >= 75:\n",
+        "            print (f'คะแนน {h} ได้เกรด  B+')\n",
+        "        elif i >= 70:\n",
+        "            print (f'คะแนน {h} ได้เกรด  B')\n",
+        "        elif i >= 65:\n",
+        "            print (f'คะแนน {h} ได้เกรด  C+')\n",
+        "        elif  i >= 60:\n",
+        "            print (f'คะแนน {h} ได้เกรด  C')\n",
+        "        elif  i >= 55:\n",
+        "            print (f'คะแนน {h} ได้เกรด  D+')\n",
+        "        elif  i >= 50:\n",
+        "            print (f'คะแนน {h} ได้เกรด  D')\n",
+        "        elif  i >= 0:\n",
+        "            print (f'คะแนน {h} ได้เกรด  F')\n",
+        "        else:\n",
+        "            print (f'คะแนน {h} ไม่สามารถตัดเกรดได้')"
+      ],
+      "metadata": {
+        "id": "L572-ag3dtDO",
+        "outputId": "c68e2993-3718-42f3-ae4e-9dc57b841713",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 50, 65, 90, 101, -5, 49, 'ก', 80]\n",
+            "คะแนน 1 ได้เกรด  F\n",
+            "คะแนน 50 ได้เกรด  F\n",
+            "คะแนน 65 ได้เกรด  F\n",
+            "คะแนน 90 ได้เกรด  F\n",
+            "คะแนน 101 ได้เกรด  F\n",
+            "คะแนน -5 ได้เกรด  F\n",
+            "คะแนน 49 ได้เกรด  F\n",
+            "คะแนน ก ไม่สามารถตัดเกรดได้\n",
+            "คะแนน 80 ได้เกรด  F\n"
+          ]
+        }
+      ]
     }
   ]
 }
